--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
+#FakeStore API urls
 fakestore.api.url=https://fakestoreapi.com
 fakestore.api.path.product=/products
+
+#MySql database connection details
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/productservice
+spring.datasource.username=productserviceuser
+# spring.datasource.password=ThePassword
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
