implemented db migration/versioning - flyway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ fakestore.api.url=https://fakestoreapi.com
 fakestore.api.path.product=/products
 
 #MySql database connection details
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:mysql://localhost:3306/productservice
 spring.datasource.username=productserviceuser
 # spring.datasource.password=ThePassword
